add Image files

--- a/index.html
+++ b/index.html
@@ -1,40 +1,99 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
   <title> SoongPiler-Welcome</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="style.css">
-  <script src=
-  "https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js">
-  </script>
-  <script src ='colors.js'></script>
+
+  <meta name="author" content="YUSEONG">
+  <meta name="description" content="SoongPiler Project">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1, minimum-scale=1">
+
+  <!-- http://ogp.me/ -->
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="SoongPiler">
+  <meta property="og:title" content="Build software better, together">
+  <meta property="og:description" content="SoongSil Univ Web Compiler Project">
+  <meta property="og:image" content="img/logo__github.png">
+  <meta property="og:url" content="https://ssu.ac.kr">
+
+  <!-- https://developer.twitter.com/en/docs/tweets/optimize-with-cards/guides/getting-started.html -->
+  <meta property="twitter:card" content="summary">
+  <meta property="twitter:site" content="SoongPiler">
+  <meta property="twitter:title" content="Build software better, together">
+  <meta property="twitter:description" content="SoongSil Univ Web Compiler Project">
+  <meta property="twitter:image" content="img/logo__github.png">
+  <meta property="twitter:url" content="https://ssu.ac.kr">
+
+  <!-- <link rel="shortcut icon" href="image/x-icon" href="favicon.ico"> -->
+  <link rel="icon" href="favicon.png">
+  <link rel="apple-touch-icon" href="favicon.png">
+
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+  <!-- <link rel="stylesheet" href="css/reset.css"> -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
-  <h1><a href="view/index.html">SoongPiler Project</a></h1>
-  <!-- <input id = 'night_day' type="button" value="night" onclick="
-  nightDayHandler(this);"> -->
-  <div id="grid">
-    <ol>
-      <li><a href="view/1.html" style="color:powderblue"> JAVA학습 </a></li>
-      <li><a href="view/2.html" > CSS </a></li>
-      <li><a href="view/3.html" > JavaScript </a></li>
-    </ol>
+  <div class="body__container">
 
-    <div id="article">
-      <h2> SoongPiler Project </h2>
+    <!-- HEADER -->
+    <header class="section">
+        <div class="inner clearfix">
+            <div class="menu-group float--left">
+                <div class="logo">
+                    <!-- <a href="index.html">SoongPiler</a> -->
+                </div>
+                <ul class="main-menu">
+                    <li><a href="index.html">SoongPiler</a></li>
+                    <li><a href="View/1.html">학습하기</a></li>
+                    <li><a href="Controller/compile.php">JAVA 코딩</a></li>
+                    <li><a href="Controller/python.php">PYTHON 코딩</a></li>
+                    <li><a href="#">질문하기</a></li>
+                </ul>
+            </div>
 
-      <p>
-        SoongPiler에 오신 것을 환영합니다.<br>
-        <br>
-        저희는 Coding실력 향상을 위해 방문자들에게 실습 및 학습환경을 제공합니다.<br>
-        Computer Language에 대한 이해를 높여가며, 학습자들에게는 "컴퓨팅적 사고에 기반한 Developer"를<br>
-        목표로 하고 있습니다.
+            <div class="sign-group float--right">
+                <div class="btn-group">
+                    <a href="#" class="btn sign-in">Sign in</a>
+                    <a href="#" class="btn btn--primary sign-up">Sign up</a>
+                </div>
+                <form id="search-form" method="POST" action="">
+                    <input type="text" id="search" class="input--text" placeholder="Search SoongPiler">
+                    <input type="submit" value="Submit">
+                </form>
+                <ul class="sub-menu">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Support</a></li>
+                </ul>
+            </div>
 
-      </p>
-      <div id="compile">
-        <a href="../controller/compile.php">컴파일 해보기</a>
-    </div>
+        </div>
+    </header>
+
+    <!-- VISUAL -->
+    <section class="section section--visual">
+        <div class="inner">
+
+            <div class="summary">
+                <div class="summary__title">
+                    숭실대 웹 컴파일러 프로젝트
+                </div>
+                <div class="summary_description">
+                    언제 어디서나 쉽고 재미있게 코딩을 접하자.
+                </div>
+            </div>
+
+            <form id="sign-form" method="POST" action="">
+
+            </form>
+
+        </div>
+    </section>
+
+
+
   </div>
 </body>
 </html>
